--- a/staticLayout/main.css
+++ b/staticLayout/main.css
@@ -47,6 +47,12 @@ h1 {
     color: white;
     padding-bottom: 0px;  /* text-shadow: 2px 2px 2px lightcoral; */
 }
+
+.header-try {
+  text-align: center;
+  color: rgb(30, 155, 80);
+  padding-bottom: 0px;  /* text-shadow: 2px 2px 2px lightcoral; */
+}
 #home {
     margin-top: -19px;
     position: relative;
@@ -55,7 +61,7 @@ h1 {
     padding-top: 1em;
     padding-bottom: 1em;
     background: url("bkgrnd.jpg");
-    height: 600px;
+    height: 475px;
 }
 
 .main {
@@ -65,7 +71,9 @@ h1 {
 
 h2 {
   color: lightslategray;
-}.middle {
+}
+
+.middle {
     background: linear-gradient(
 318.68deg
 , #0F495C 0%, #0D3640 49.72%, #08141F 100%);
@@ -76,6 +84,18 @@ h2 {
     font-style: oblique;
     color: #FEFEFE;
     height: 100px;
+}
+
+.black {
+  background: black;
+  padding-bottom: 10px;
+  margin-left: -15px;
+  margin-right: -15px;
+  /* margin-top: 0px; */
+  font-size: x-large;
+  font-style: oblique;
+  color: #FEFEFE;
+  height: 2000px;
 }
 #home {
     padding-top: 124px;
@@ -88,7 +108,7 @@ h2 {
 }
 .oneBox {
   /* background: #627da0; */
-	margin-top: -100px;
+	margin-top: -85px;
 	margin-left: 100px;
   position: absolute;
 }
@@ -114,13 +134,30 @@ h2 {
 
 .button1 {
     
-  background-color: #4CAF50; /* Green */
-    border: none;;
-    color: white;
+  background-color: white; /* Green */
+    border: none;
+    border-radius: 4px;
+    color: black;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 14px;
-    margin-left: 800px;
+    margin-left: 840px;
   }
+.mugs {
+  /* margin-left: 400PX; */
+  display: flex;
+  justify-content: center;
+  /* margin-right: 100px; */
+}
+
+/* .a {
+  padding-right: 15px
+}
+.b {
+  padding-right: 15px
+}
+.c {
+  padding-right: 15px
+} */
