--- a/staticLayout/main-backup.css
+++ b/staticLayout/main-backup.css
@@ -102,7 +102,7 @@ h2 {
 }
 
 .box {
-    width: 300px;
+    width: 250px;
     height: 100px;
     margin-bottom: 10px;
 }
@@ -134,10 +134,10 @@ h2 {
 
 .button1 {
     
-  background-color: white; /* White */
-    border: 0;
+  background-color: white; /* Green */
+    border: none;
     border-radius: 4px;
-    color: rgb(242, 37, 37);
+    color: black;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
